force-app/main/default/objects/RFP_Response__c/RFP_Response__c.object-meta.xml
<CustomObject>
    <label>RFP Response</label>
    <pluralLabel>RFP Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>RFP-{00000}</displayFormat>
    </nameField>
</CustomObject>