force-app/main/default/objects/RFP_Response__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Data Governance</fullName>
                </value>
                <value>
                    <fullName>Pricing & Licensing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>