force-app/main/default/objects/RFP_Response__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunitys</relationshipLabel>
    <relationshipName>RFP_Responses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>