force-app/main/default/objects/RFP_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>LongTextArea</type>
    <length>2048</length>
</CustomField>